# skill-forge

./: .gitignore  .skillforge.yaml  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: examples.yml
.serena/: project.yml
analysis/: crewai-bash-execution-validation.md  crewai-meta-skill-injection-validation.md  crewai-validation.md  e2e-validation.md  elevenlabs-agents-tools-analysis.md  elevenlabs-e2e-validation.md  elevenlabs-validation.md  general-validation.md  implementation-coverage.md  langchain-validation.md  skill-size-validation.md
docs/plans/: 2025-01-11-no-markus-or-tutor.md  2025-01-18-example-projects-design.md  2025-12-04-skillforge-design.md  2026-01-11-elevenlabs-adapter-design.md  2026-01-18-elevenlabs-test-cleanup.md
examples/: README.md
examples/crewai-demo/: .skillforge.yaml  README.md  crew.py  requirements.txt  run.py
examples/elevenlabs-demo/: .skillforge.yaml  README.md  agent.py  requirements.txt  run.py
examples/elevenlabs-demo/skills/: greeting  knowledge-search
examples/langchain-demo/: .skillforge.yaml  README.md  agent.py  requirements.txt  run.py
examples/langchain-demo/skills/: ticket-creation  troubleshooting
ralph/: build-plan.txt  create-plan.txt  implement-plan.txt
src/skillforge/: __init__.py  cli.py  crewai.py  langchain.py
tests/: __init__.py
tests/fixtures/: __init__.py
tests/integration/: __init__.py  test_e2e_validation.py  test_elevenlabs_e2e.py
tests/unit/: __init__.py  test_cli_install.py  test_cli_marketplace.py  test_cli_read.py  test_config.py  test_crewai_adapter.py  test_elevenlabs_agent.py  test_elevenlabs_meta_skill.py  test_elevenlabs_python_api.py  test_elevenlabs_sync.py  test_example_skills.py  test_langchain_adapter.py  test_manifest.py  test_marketplace_registry.py  test_meta_skill.py  test_skill.py  test_tool_registry.py
tests/validation/: __init__.py
(+72 files in other folders)
